// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox interaction should render checked checkbox 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root FormControlLabel-root Checkbox-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary PrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked Mui-checked"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Checkbox-checkedIcon"
        />
        <input
          class="PrivateSwitchBase-input"
          data-indeterminate="false"
          type="checkbox"
          value=""
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      Select item
    </span>
  </label>
</div>
`;

exports[`renders default checkbox without label 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary PrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-uncheckedIcon"
      />
      <input
        class="PrivateSwitchBase-input"
        data-indeterminate="false"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`renders disabled state 1`] = `
<div>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary Mui-disabled PrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled Mui-disabled Checkbox-disabled Mui-disabled"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-uncheckedIcon"
      />
      <input
        class="PrivateSwitchBase-input"
        data-indeterminate="false"
        disabled=""
        type="checkbox"
        value=""
      />
    </span>
  </span>
</div>
`;

exports[`renders indeterminate state 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary PrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary MuiCheckbox-indeterminate"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="Checkbox-indeterminateIcon"
      />
      <input
        class="PrivateSwitchBase-input"
        data-indeterminate="true"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`should render default checkbox with label 1`] = `
<div>
  <label
    class="MuiFormControlLabel-root FormControlLabel-root Checkbox-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary PrivateSwitchBase-root MuiCheckbox-root Checkbox-root MuiCheckbox-colorSecondary"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Checkbox-uncheckedIcon"
        />
        <input
          class="PrivateSwitchBase-input"
          data-indeterminate="false"
          type="checkbox"
          value=""
        />
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label"
    >
      Select item
    </span>
  </label>
</div>
`;
